<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/city_input_hint"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/status_image_city"
        android:layout_width="117dp"
        android:layout_height="93dp"
        android:src="@drawable/loading_animation"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/select_city_button"
        app:layout_constraintStart_toStartOf="@id/select_city_button"
        app:layout_constraintTop_toTopOf="@id/select_city_button"
        app:layout_constraintBottom_toBottomOf="@id/select_city_button"
        android:contentDescription="@string/status_image_city_main_fragm_content_desc"
        tools:visibility="visible" />

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/select_city_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_city_button"
        app:layout_constraintTop_toBottomOf="@id/textField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp" />

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/current_location_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/selected_city_text_current_location"
        app:layout_constraintTop_toBottomOf="@id/select_city_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp" />

    <TextView
        android:gravity="center"
        android:id="@+id/selectedCityTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_location_button"
        tools:text="Selected: Rome"
        android:textColor="?android:textColorPrimary" />

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/showForecastButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show_weather_button"
        app:layout_constraintTop_toBottomOf="@id/selectedCityTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/weekForecastButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showForecastButton">

        <TextView
            android:id="@+id/todayForecastTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            tools:text="Weather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdhWeather todayWeataasdasdh" />
    </ScrollView>

    <ImageView
        android:id="@+id/status_image_forecast"
        android:layout_width="117dp"
        android:layout_height="93dp"
        android:contentDescription="@string/status_image_forecast_main_fragm_content_desc"
        android:src="@drawable/loading_animation"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="@id/scrollView"
        app:layout_constraintStart_toStartOf="@id/scrollView"
        app:layout_constraintTop_toTopOf="@id/scrollView"
        tools:visibility="visible" />

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/weekForecastButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/week_forecast_button"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>